Fleshed out hangman on rails desc

--- a/html/index.html
+++ b/html/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                            <i class="fa fa-code fa-user-friends"></i>
+                            <i class="fa fa-user"></i>
                             <h3>Project Management</h3>
                             <p>
                                 As part of my involvement working on an industry project, game jams,
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="mh-service-item shadow-1 dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                            <i class="fa fa-code fa-codepen"></i>
+                            <i class="fa fa-codepen"></i>
                             <h3>Code Design</h3>
                             <p>
                                 Through a strong academic background in Java and Python I've learnt how to
@@ -234,6 +234,12 @@
                                             <div class="mh-featured-project-content">
                                                 <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web App</h4>
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Hangman on Rails</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                                    <span class = "tag" id="ruby">Rails 5</span>
+                                                    <span class="tag" id="js">Javascript</span>
+                                                    <span class="tag" id="bootstrap">Bootstrap</span>
+                                                    <span class="tag" id="droplet">Droplet</span>
+                                                </span>
                                                 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                                     Hangman on Rails is a full stack web application written in Ruby on Rails, with bootstrap for styling.
                                                     It's a simple and clean implementation of the classic hangman game, allowing you to create
@@ -242,13 +248,15 @@
                                                     online hangman which wasn't riddled with adds, and it turned into an extendable passion project
                                                     that I plan to add more features to.
                                                 </p>
-                                                <a href="https://hangmanonrails.com/" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
+                                                <a href="https://hangmanonrails.com/" target="_blank" class="btn btn-fill wow fadeInUp" id="websiteButton" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
+                                                <a href="https://github.com/jezza97/hangman_rails" target="_blank" class="btn btn-fill wow fadeInUp" id="githubButton" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    <i class="fa fa-github"></i> Github
+                                                </a>
 
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Project Items -->
                                 <div class="col-sm-12 mh-featured-item">
                                     <div class="row">
                                         <div class="col-sm-7">
@@ -258,28 +266,20 @@
                                         </div>
                                         <div class="col-sm-5">
                                             <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
-                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
-                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                                It will fit perfectly for Startup, Web App or any type of Web Services.
-                                                It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                                All variations are organized separately so you can use / customize the template very easily.</p>
-                                                <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                                    <blockquote>
-                                    					<q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                    				<blockquote>
-                                    					<q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                    				<blockquote>
-                                    					<q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                                </div>
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Game</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Insanity Pong</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                                    <span class = "tag" id="ruby">Java</span>
+                                                    <span class="tag" id="js">Processing</span>
+                                                </span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    
+                                                </p>
+                                                <a href="https://hangmanonrails.com/" target="_blank" class="btn btn-fill wow fadeInUp" id="websiteButton" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
+                                                <a href="https://github.com/jezza97/hangman_rails" target="_blank" class="btn btn-fill wow fadeInUp" id="githubButton" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    <i class="fa fa-github"></i> Github
+                                                </a>
+
                                             </div>
                                         </div>
                                     </div>
