--- a/html/index.html
+++ b/html/index.html
@@ -227,13 +227,77 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/hangman.png" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
                                             <div class="mh-featured-project-content">
                                                 <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web App</h4>
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Hangman on Rails</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                                    <span class = "tag" id="ruby">Rails 5</span>
+                                                    <span class="tag" id="js">Javascript</span>
+                                                    <span class="tag" id="bootstrap">Bootstrap</span>
+                                                    <span class="tag" id="droplet">Droplet</span>
+                                                </span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    Hangman on Rails is a full stack web application written in Ruby on Rails, with bootstrap for styling.
+                                                    It's a simple and clean implementation of the classic hangman game, allowing you to create
+                                                    games than can easily be shared with your friends through a persistent URL.
+                                                    I decided to create this game when my friends and I could not find a website to play
+                                                    online hangman which wasn't riddled with adds, and it turned into an extendable passion project
+                                                    that I plan to add more features to.
+                                                </p>
+                                                <a href="https://hangmanonrails.com/" target="_blank" class="btn btn-fill wow fadeInUp" id="websiteButton" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
+                                                <a href="https://github.com/jezza97/hangman_rails" target="_blank" class="btn btn-fill wow fadeInUp" id="githubButton" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    <i class="fa fa-github"></i> Github
+                                                </a>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 mh-featured-item">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                                                <img src="assets/images/pong.png" alt="" class="img-fluid">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <div class="mh-featured-project-content">
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Game</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Insanity Pong</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                                    <span class = "tag" id="ruby">Java</span>
+                                                    <span class="tag" id="js">Processing</span>
+                                                </span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    Insanity Pong was created by myself and a friend for Kiwijam 2019. Our idea was simple - to take Pong, and dial it up to 11.
+                                                    It has power-ups, constant random spawning, balls that collide into groups that do extra damage, and healthbars which turn it into a war of attrition.
+                                                    It was written in two days using a Processing library for Java to combine the ease of use of processing with the advanced data structures and
+                                                    algorithms that Java provides. It was great fun to work on!
+                                                </p>
+                                                <a href="https://hangmanonrails.com/" target="_blank" class="btn btn-fill wow fadeInUp" id="websiteButton" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
+                                                <a href="https://github.com/unpragmatic/kiwijam-2019" target="_blank" class="btn btn-fill wow fadeInUp" id="githubButton" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                                    <i class="fa fa-github"></i> Github
+                                                </a>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 mh-featured-item">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                                                <img src="assets/images/hangman.png" alt="" class="img-fluid">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <div class="mh-featured-project-content">
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Mobile App</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Flat Manager</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                                     <span class = "tag" id="ruby">Rails 5</span>
                                                     <span class="tag" id="js">Javascript</span>
@@ -253,69 +317,6 @@
                                                     <i class="fa fa-github"></i> Github
                                                 </a>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-12 mh-featured-item">
-                                    <div class="row">
-                                        <div class="col-sm-7">
-                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-5">
-                                            <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Game</h4>
-                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Insanity Pong</h2>
-                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                                    <span class = "tag" id="ruby">Java</span>
-                                                    <span class="tag" id="js">Processing</span>
-                                                </span>
-                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                                    
-                                                </p>
-                                                <a href="https://hangmanonrails.com/" target="_blank" class="btn btn-fill wow fadeInUp" id="websiteButton" data-wow-duration="0.8s" data-wow-delay="0.7s">Check It Out</a>
-                                                <a href="https://github.com/jezza97/hangman_rails" target="_blank" class="btn btn-fill wow fadeInUp" id="githubButton" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                                    <i class="fa fa-github"></i> Github
-                                                </a>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Project Items -->
-                                <div class="col-sm-12 mh-featured-item">
-                                    <div class="row">
-                                        <div class="col-sm-7">
-                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-5">
-                                            <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
-                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
-                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Stamp is a clean and elegant Multipurpose Landing Page Template. 
-                                                It will fit perfectly for Startup, Web App or any type of Web Services.
-                                                It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
-                                                All variations are organized separately so you can use / customize the template very easily.</p>
-                                                <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
-                                                    <blockquote>
-                                    					<q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                    				<blockquote>
-                                    					<q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                    				<blockquote>
-                                    					<q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                    					<cite>- Shane Kavanagh</cite>
-                                    				</blockquote>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
