--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         -->
 
         <section id="mh-projects">
-        <section class="mh-featured-project image-bg featured-img-one">
+        <section class="mh-featured-project image-bg">
             <div class="img-color-overlay">
                 <div class="container">
                     <div id="light">
@@ -262,7 +262,7 @@
                                                 <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web App</h4>
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Hangman on Rails</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                                    <span class = "tag" id="ruby">Rails 5</span>
+                                                    <span class = "tag" id="ruby">Rails</span>
                                                     <span class="tag" id="js">Javascript</span>
                                                     <span class="tag" id="bootstrap">Bootstrap</span>
                                                     <span class="tag" id="droplet">Droplet</span>
